--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
     "name": "whatsapp-bot-md",
-      "version": "1.0.0",
-        "description": "WhatsApp Bot running on Render",
-          "main": "index.js",
-            "scripts": {
-                "start": "node index.js",
-                    "test": "echo \"Error: no test specified\" && exit 1"
-                      },
-                        "engines": {
-                            "node": ">=18.0.0"
-                              },
-                                "repository": {
-                                    "type": "git",
-                                        "url": "git+https://github.com/Pyaru/whatsapp-bot-md.git"
-                                          },
-                                            "keywords": [
-                                                "whatsapp",
-                                                    "bot",
-                                                        "baileys",
-                                                            "render"
-                                                              ],
-                                                                "author": "",
-                                                                  "license": "ISC",
-                                                                    "type": "commonjs",
-                                                                      "bugs": {
-                                                                          "url": "https://github.com/Pyaru/whatsapp-bot-md/issues"
-                                                                            },
-                                                                              "homepage": "https://github.com/Pyaru/whatsapp-bot-md#readme",
-                                                                                "dependencies": {
-                                                                                    "@google/generative-ai": "^0.24.1",
-                                                                                        "@whiskeysockets/baileys": "^7.0.0-rc.9",
-                                                                                            "dotenv": "^17.2.3",
-                                                                                                "express": "^5.2.1",
-                                                                                                    "node-fetch": "^2.7.0",
-                                                                                                        "pino": "^10.1.0",
-                                                                                                            "qrcode-terminal": "^0.12.0"
-                                                                                                              }
-                                                                                                              }
+    "version": "1.0.0",
+    "description": "WhatsApp Bot running on Render",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Pyaru/whatsapp-bot-md.git"
+    },
+    "keywords": [
+        "whatsapp",
+        "bot",
+        "baileys",
+        "render"
+    ],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/Pyaru/whatsapp-bot-md/issues"
+    },
+    "homepage": "https://github.com/Pyaru/whatsapp-bot-md#readme",
+    "dependencies": {
+        "@google/generative-ai": "^0.24.1",
+        "@whiskeysockets/baileys": "^7.0.0-rc.9",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
+        "fuse.js": "^7.1.0",
+        "node-fetch": "^2.7.0",
+        "pino": "^10.1.0",
+        "qrcode-terminal": "^0.12.0"
+    }
+}
